# ferroscope

./: Cargo.toml  PLAN.md  README.md  demo.tape
.github/workflows/: ci.yml
benches/: alloc_bench.rs  iter_bench.rs  sort_bench.rs
src/: app.rs  events.rs  main.rs  theme.rs
src/demos/: mod.rs
src/demos/d01_ownership/: mod.rs
src/demos/d02_memory/: mod.rs
src/demos/d03_zero_cost/: mod.rs
src/demos/d04_concurrency/: mod.rs
src/demos/d05_async/: mod.rs
src/demos/d06_performance/: mod.rs
src/demos/d07_type_system/: mod.rs
src/demos/d08_error_handling/: mod.rs
src/demos/d09_lifetimes/: mod.rs
src/demos/d10_unsafe/: mod.rs
src/demos/d11_wasm/: mod.rs
src/demos/d12_system_metrics/: mod.rs
src/demos/d13_compile_time/: mod.rs
src/demos/d14_cargo_ecosystem/: mod.rs
src/demos/d15_no_std/: mod.rs
src/demos/d16_macros/: mod.rs
src/metrics/: history.rs  mod.rs  sampler.rs
src/ui/: footer.rs  header.rs  layout.rs  mod.rs  nav.rs  quiz.rs
src/ui/widgets/: code_panel.rs  flame_graph.rs  gauge_bar.rs  mod.rs  sparkline_ext.rs  thread_lane.rs
